# damta-widget

./: LICENSE  README.md  about.html  index.html  package-lock.json  package.json  settings.html  stats.html  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  entry-about.tsx  entry-settings.tsx  entry-stats.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AshEffect.tsx  MemoPanel.tsx  TimerDisplay.tsx
src/components/Cigarette/: Ash.tsx  Cigarette.tsx  Ember.tsx  Filter.tsx  Paper.tsx  SmokeParticles.tsx
src/hooks/: useCigarette.ts  useLocalStorage.ts  useSmokeParticles.ts  useTimer.ts
src/stores/: settingsStore.ts
src/styles/: cigarette.css
src/windows/: About.tsx  MainWidget.tsx  Settings.tsx  Stats.tsx
