[package]
name = "ssudam-widget"
version = "1.0.0"
description = "쓰담 위젯 - 쓰고, 담배를 피우다"
authors = ["정진호 <ckato9173@gmail.com>"]
edition = "2021"

[lib]
name = "ssudam_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
